pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
    - image: asia.gcr.io/$PROJECT_ID/wdpress/hello-world
      imagePullPolicy: Always
      name: hello-world
